--- a/public/cherry/member/memberEdit.html
+++ b/public/cherry/member/memberEdit.html
@@ -129,15 +129,22 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">취미</th>
-				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
-					id="" name="hobby" value="smartphone" checked>스마트폰 <input type="checkbox" id="" name="hobby"
-					value="reading">독서 <input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input
-					type="checkbox" id="" name="hobby" value="camping">캠핑 <input type="checkbox" id="" name="hobby"
-					value="music" checked>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <br>
-					<input type="checkbox" id="" name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby"
-					value="jog">조깅 <input type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox"
-					id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id="" name="hobby" value="sports" checked>스포츠
-					<input type="checkbox" id="" name="hobby" value="else">기타</td>
+				<td colspan="3"><input type="checkbox" class="btn-check" id="btn-check-outlined1" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined1">영화시청</label><input type="checkbox" class="btn-check" id="btn-check-outlined2" autocomplete="off" checked>
+<label class="btn btn-outline-success" for="btn-check-outlined2">스마트폰</label><input type="checkbox" class="btn-check" id="btn-check-outlined3" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined3">독서</label><input type="checkbox" class="btn-check" id="btn-check-outlined4" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined4">쇼핑</label><input type="checkbox" class="btn-check" id="btn-check-outlined5" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined5">캠핑</label><input type="checkbox" class="btn-check" id="btn-check-outlined6" autocomplete="off" checked>
+<label class="btn btn-outline-success" for="btn-check-outlined6">음악감상</label><input type="checkbox" class="btn-check" id="btn-check-outlined7" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined7">악기연주</label>
+<br>
+<input type="checkbox" class="btn-check" id="btn-check-outlined8" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined8">보드게임</label><input type="checkbox" class="btn-check" id="btn-check-outlined9" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined9">조깅</label><input type="checkbox" class="btn-check" id="btn-check-outlined10" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined10">바느질</label><input type="checkbox" class="btn-check" id="btn-check-outlined11" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined11">맛집탐방</label><input type="checkbox" class="btn-check" id="btn-check-outlined12" autocomplete="off" checked>
+<label class="btn btn-outline-success" for="btn-check-outlined12">스포츠</label><input type="checkbox" class="btn-check" id="btn-check-outlined13" autocomplete="off">
+<label class="btn btn-outline-success" for="btn-check-outlined13">기타</label></td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">결혼여부</th>
