--- a/public/cherry/member/memberEdit.html
+++ b/public/cherry/member/memberEdit.html
@@ -115,9 +115,62 @@
 
 			<tr>
 				<th class="text-center table-success">sns</th>
-				<td><select id="" name="sns"><option>insta</option>
-						<option selected>facebook</option>
-						<option>twitter</option></select> <input type="text" id="" name="snsText"></td>
+				<td>
+					<!-- <select id="" name="sns"><option>insta</option>
+						<option>facebook</option>
+						<option>twitter</option></select> <input type="text" id="snsText" name="snsText">
+				 -->
+					<div class="input-group">
+						<div class="input-group-text">
+							<input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+						</div>
+						<div>
+							<img src="./sns_icon/icon_round_facebook_48.png">
+						</div>
+						<input type="text" class="form-control" aria-label="Text input with checkbox">
+					</div>
+
+					<div class="input-group">
+						<div class="input-group-text">
+							<input class="form-check-input mt-0" type="checkbox" value="" checked>
+						</div>
+						<div>
+							<img src="./sns_icon/icon_round_instgram_48.png">
+						</div>
+						<input type="text" class="form-control" aria-label="Text input with radio button" value="yym2044">
+					</div>
+
+					<div class="input-group">
+						<div class="input-group-text">
+							<input class="form-check-input mt-0" type="checkbox" value="">
+						</div>
+						<div>
+							<img src="./sns_icon/icon_round_kakaotalk_48.png">
+						</div>
+						<input type="text" class="form-control" aria-label="Text input with radio button">
+					</div>
+
+					<div class="input-group">
+						<div class="input-group-text">
+							<input class="form-check-input mt-0" type="checkbox" value="">
+						</div>
+						<div>
+							<img src="./sns_icon/icon_round_twitter_48.png">
+						</div>
+						<input type="text" class="form-control" aria-label="Text input with radio button">
+					</div>
+
+					<div class="input-group">
+						<div class="input-group-text">
+							<input class="form-check-input mt-0" type="checkbox" value="">
+						</div>
+						<div>
+							<img src="./sns_icon/icon_round_youtube_48.png">
+						</div>
+						<input type="text" class="form-control" aria-label="Text input with radio button">
+					</div>
+
+				</td>
 				<th class="text-center table-success">사진</th>
 				<td><input type="file" id="" name="photo"></td>
 			</tr>
