--- a/public/cherry/member/memberList.html
+++ b/public/cherry/member/memberList.html
@@ -11,10 +11,15 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
 </head>
 
 <body class="container">
-
+	<div style="text-align: center;">
+		<img src="./coupang.png" align="center;">
+	</div>
+	<br>
+	<div class="shadow-lg p-3 mb-5 bg-body rounded">
 	<table class="table caption-top table-hover table-borderless">
 
 		<caption class="text-center">
@@ -22,14 +27,14 @@
 				<b style="font-size: 30px; align-self: center;">회원목록</b>
 			</div>
 		</caption>
-		
+
 		<tr class="table-success">
 			<th>이름</th>
 			<th>성별</th>
 			<th>아이디</th>
 			<th>비번</th>
 			<th>이메일</th>
-			<th>생년월일일</th>
+			<th>생년월일</th>
 			<th>연락처</th>
 		</tr>
 		<tr>
@@ -37,7 +42,8 @@
 			<td>남</td>
 			<td>yym2044</td>
 			<td>111</td>
-			<td>yym@naver.com</td>
+			<td>yym@naver.com <span class="badge bg-success" type="button" data-bs-toggle="modal"
+				data-bs-target="#mailModal">email</span></td>
 			<td>960607</td>
 			<td>01011111111</td>
 		</tr>
@@ -69,10 +75,55 @@
 			<td>01044444444</td>
 		</tr>
 	</table>
-<br>
+	</div>
+	<br>
 
 	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 		<a class="btn btn-success" href="./memberForm.html" role="button">등록</a>
+	</div>
+
+	<!-- 이메일보내기모달 -->
+
+	<div class="modal fade" id="mailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">메일 보내기</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div>
+						<input class="form-control" id="" disabled value="yym2044@naver.com">
+					</div>
+					<div>
+						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="내용을 입력해주세요"></textarea>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mailConformModal">전송</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- 이메일전송확인모달 -->
+
+	<div class="modal fade" id="mailConformModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">알림</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<p>전송이 완료되었습니다.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
