--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -63,7 +63,7 @@
 		<tr>
 			<th class="text-center table-success">이메일</th>
 			<td>yym2044@naver.com
-				<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#mailModal">메일 보내기
+				
 			</td>
 			<th class="text-center table-success">이메일 마케팅 수신 동의</th>
 			<td>예</td>
@@ -84,7 +84,7 @@
 
 		<tr>
 			<th class="text-center table-success">sns</th>
-			<td>facebook</td>
+			<td>instagram / yym2044</td>
 			<th class="text-center table-success">사진</th>
 			<td><img src="./winter.jpeg" width="100"></td>
 		</tr>
@@ -165,47 +165,6 @@
 				<div class="modal-footer">
 					<a class="btn btn-primary" href="./memberList.html" role="button">확인</a>
 					<button type="button" class="btn btn-danger" data-bs-dismiss="modal">취소</button>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- 이메일보내기모달 -->
-
-	<div class="modal fade" id="mailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">메일 보내기</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<div>
-						<input class="form-control" id="" disabled value="yym2044@naver.com">
-					</div>
-					<div>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="내용을 입력해주세요"></textarea>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mailConformModal">전송</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-<!-- 이메일전송확인모달 -->
-
-<div class="modal fade" id="mailConformModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">전송완료</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
