--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -72,7 +72,7 @@
 
 		<tr>
 			<th class="text-center table-success">추천인</th>
-			<td colspan="3">김하나, 김둘, 김셋</td>
+			<td colspan="3"></td>
 		</tr>
 		<tr>
 			<th class="text-center table-success">비밀번호 문제</th>
