--- a/public/cherry/member/memberEdit.html
+++ b/public/cherry/member/memberEdit.html
@@ -9,6 +9,24 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	
+<script>
+        const add_textbox = () => {
+            const box = document.getElementById("box");
+            const newP = document.createElement('p');
+            newP.innerHTML = 
+				
+		
+            "<input class='form-control' type='text'> <input class='btn btn-danger' type='button' value='삭제' onclick='remove(this)'>";
+            	
+            box.appendChild(newP);
+        }
+        const remove = (obj) => {
+            document.getElementById('box').removeChild(obj.parentNode);
+        }
+</script>	
+	
+	
 </head>
 
 <body class="container">
@@ -97,8 +115,14 @@
 
 			<tr>
 				<th class="text-center table-success">추천인</th>
-				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input type="text" id=""
-					name="recommender2" value="김둘"> <input type="text" id="" name="recommender3" value="김셋"></td>
+				<td colspan="3">
+					<div id="box" class="row g-3">
+						<div class="col-11">
+							<input class="form-control col-5" type="text">
+						</div>
+						<input class="btn btn-success col-auto" type="button" value="추가" onclick="add_textbox()">
+					</div>
+				</td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">비밀번호 문제</th>
