--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -24,7 +24,7 @@
         const remove = (obj) => {
             document.getElementById('box').removeChild(obj.parentNode);
         }
-    </script>
+</script>
 
 </head>
 
@@ -78,7 +78,37 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">주소</th>
-				<td colspan="3"><input class="form-control" type="text" placeholder="주소를 입력하세요" id="" name="address"></td>
+				<td colspan="3">
+					<button class="btn btn-outline-secondary" type="button" id="button-addon1" data-bs-toggle="modal"
+						data-bs-target="#exampleModal">주소 찾기</button> <!--MODAL -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">주소 검색</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								</div>
+								<div class="modal-body">
+									<h3 style="text-align: center">주소 검색</h3>
+									<br> <br>
+									<div class="input-group mb-3">
+										<input class="form-control form-control-lg" type="text" placeholder="주소 입력"> <br> <a
+											href="https://map.naver.com/v5" class="btn btn-outline-secondary" role="button" id="button-addon2">검색</a>
+									</div>
+									<p>도로명, 건물명 또는 지번 중 편한 방법으로 검색하세요.</p>
+									<p>예) 건물명 : 방배동 우성아파트</p>
+									<p>도로명 : 테헤란로 152</p>
+									<p>지역번 : 역삼동 737</p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+									<button type="button" class="btn btn-primary">확인</button>
+								</div>
+							</div>
+						</div>
+					</div> <!-- MODAL END -->
+					<input class="form-control" type="text" placeholder="주소를 입력하세요" id="" name="address">
+				</td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">모바일</th>
@@ -173,9 +203,9 @@
 				<th class="text-center table-success">추천인</th>
 				<td colspan="3">
 					<div id="box" class="row g-3">
-					<div class="col-11">
-						<input class="form-control col-5" type="text"> 
-					</div>
+						<div class="col-11">
+							<input class="form-control col-5" type="text">
+						</div>
 						<input class="btn btn-success col-auto" type="button" value="추가" onclick="add_textbox()">
 					</div>
 				</td>
@@ -359,6 +389,8 @@
 		<a class="btn btn-success" href="./memberList.html" role="button">목록</a>
 	</div>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
