--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -30,12 +30,18 @@
 
 <body class="container">
 
+	<div class="row justify-content-md-center">
+		<div class="badge bg-success text-wrap" style="width: 24rem;">
+			<b style="font-size: 40px; align-self: center;">회원등록</b>
+		</div>
+	</div>
+<hr>
 	<form action="" method="get" id="" name="memberRegisterForm" enctype="multipart/form-data">
 
 		<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
 			<caption class="text-center">
 				<div class="badge bg-success text-wrap" style="width: 12rem;">
-					<b style="font-size: 30px; align-self: center;">회원등록</b>
+					<b style="font-size: 30px; align-self: center;">기본정보</b>
 				</div>
 			</caption>
 			<tr>
@@ -240,7 +246,7 @@
 							<input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
 						</div>
 						<div>
-							<img src="./sns_icon/icon_round_facebook_48.png">
+							<img src="./sns_icon/icon_round_facebook_48.png" title="Facebook">
 						</div>
 						<input type="text" class="form-control" aria-label="Text input with checkbox">
 					</div>
@@ -250,7 +256,7 @@
 							<input class="form-check-input mt-0" type="checkbox" value="">
 						</div>
 						<div>
-							<img src="./sns_icon/icon_round_instgram_48.png">
+							<img src="./sns_icon/icon_round_instgram_48.png" title="Instagram">
 						</div>
 						<input type="text" class="form-control" aria-label="Text input with radio button">
 					</div>
@@ -260,7 +266,7 @@
 							<input class="form-check-input mt-0" type="checkbox" value="">
 						</div>
 						<div>
-							<img src="./sns_icon/icon_round_kakaotalk_48.png">
+							<img src="./sns_icon/icon_round_kakaotalk_48.png" title="KakaoTalk">
 						</div>
 						<input type="text" class="form-control" aria-label="Text input with radio button">
 					</div>
@@ -270,7 +276,7 @@
 							<input class="form-check-input mt-0" type="checkbox" value="">
 						</div>
 						<div>
-							<img src="./sns_icon/icon_round_twitter_48.png">
+							<img src="./sns_icon/icon_round_twitter_48.png" title="Twitter">
 						</div>
 						<input type="text" class="form-control" aria-label="Text input with radio button">
 					</div>
@@ -280,7 +286,7 @@
 							<input class="form-check-input mt-0" type="checkbox" value="">
 						</div>
 						<div>
-							<img src="./sns_icon/icon_round_youtube_48.png">
+							<img src="./sns_icon/icon_round_youtube_48.png" title="Youtube">
 						</div>
 						<input type="text" class="form-control" aria-label="Text input with radio button">
 					</div>
@@ -344,11 +350,11 @@
 				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2">아니오</td>
 
 				<th class="text-center table-success">좋아하는 색깔</th>
-				<td><input type="color" id="" name="color"></td>
+				<td><input class="form-control form-control-color" type="color" id="" name="color"></td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">본인 소개</th>
-				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요."></textarea></td>
+				<td colspan="3"><textarea class="form-control" id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요."></textarea></td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">개인정보유효기간</th>
@@ -362,6 +368,11 @@
 		</table>
 
 		<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
+			<caption class="text-center">
+				<div class="badge bg-success text-wrap" style="width: 12rem;">
+					<b style="font-size: 30px; align-self: center;">프로젝트</b>
+				</div>
+			</caption>
 			<tr>
 				<th class="text-center table-success">번호</th>
 				<th class="text-center table-success">프로젝트명</th>
