--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -41,7 +41,7 @@
 		<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
 			<caption class="text-center">
 				<div class="badge bg-success text-wrap" style="width: 12rem;">
-					<b style="font-size: 30px; align-self: center;">기본정보</b>
+					<b style="font-size: 30px; align-self: center;">기본정보</b><br>
 				</div>
 			</caption>
 			<tr>
