--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -203,7 +203,7 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">이메일</th>
-				<td><input type="email" id="" name="email" placeholder="abcd@naver.com"></td>
+				<td><input class="form-control" type="email" id="" name="email" placeholder="abcd@naver.com"></td>
 				<th class="text-center table-success">이메일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="email_marketing" value="1">예 <input type="radio" id=""
 					name="email_marketing" value="2">아니오</td>
