--- a/public/cherry/member/memberList.html
+++ b/public/cherry/member/memberList.html
@@ -22,11 +22,13 @@
 	<div class="shadow-lg p-3 mb-5 bg-body rounded">
 	<table class="table caption-top table-hover table-borderless">
 
-		<caption class="text-center">
+		<div class="row justify-content-md-center">
 			<div class="badge bg-success text-wrap" style="width: 12rem;">
 				<b style="font-size: 30px; align-self: center;">회원목록</b>
 			</div>
-		</caption>
+		</div>
+		
+		<hr>
 
 		<tr class="table-success">
 			<th>이름</th>
