--- a/public/cherry/member/memberEdit.html
+++ b/public/cherry/member/memberEdit.html
@@ -127,7 +127,7 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">이메일</th>
-				<td><input type="email" id="" name="email" value="yym2044@naver.com"></td>
+				<td><input class="form-control" type="email" id="" name="email" value="yym2044@naver.com"></td>
 				<th class="text-center table-success">이메일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio" id=""
 					name="email_marketing" value="2">아니오</td>
@@ -147,7 +147,7 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">비밀번호 문제</th>
-				<td><select id="" name="pwQuestion">
+				<td><select class="form-select" id="" name="pwQuestion">
 						<option>나의 보물 1호는?</option>
 						<option selected>나의 고향은?</option>
 						<option>내가 키우는 애완동물의 이름은?</option>
@@ -262,11 +262,11 @@
 			</tr>
 			<tr>
 				<th class="text-center table-success">본인 소개</th>
-				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
+				<td colspan="3"><textarea class="form-control" id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
 			</tr>
 			<tr>
 				<th class="text-center table-success">개인정보유효기간</th>
-				<td colspan="3"><select id="" name="expireDate">
+				<td colspan="3"><select class="form-select" id="" name="expireDate">
 						<option>1년</option>
 						<option>3년</option>
 						<option>5년</option>
@@ -288,7 +288,7 @@
 				<td><input class="form-control" type="text" id="" name="projectName1" value="웹"></td>
 				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> ~ 종료일 : <input type="month" id=""
 					name="term1e" value="2021-01"></td>
-				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
+				<td><textarea class="form-control" id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
 				<td><input class="form-control" type="text" id="" name="buyer1" value="자체개발"></td>
 			</tr>
 			<tr>
@@ -296,7 +296,7 @@
 				<td><input class="form-control" type="text" id="" name="projectName2" value="안드로이드"></td>
 				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> ~ 종료일 : <input type="month" id=""
 					name="term2e" value="2022-01"></td>
-				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
+				<td><textarea class="form-control" id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
 				<td><input class="form-control" type="text" id="" name="buyer2" value="자체개발"></td>
 			</tr>
 
