--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -19,12 +19,12 @@
 	<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
 
 
-		<caption class="text-center">
+		<div class="row justify-content-md-center">
 			<div class="badge bg-success text-wrap" style="width: 12rem;">
 				<b style="font-size: 30px; align-self: center;">회원정보</b>
 			</div>
-		</caption>
-
+		</div>
+	<hr>
 
 		<tr>
 			<th class="text-center table-success">이름</th>
