--- a/public/durian/html/xdmin/loginout/login2.html
+++ b/public/durian/html/xdmin/loginout/login2.html
@@ -20,12 +20,12 @@
 		<div class="container bg-light mb-5">
 
 			<div class="input-group mb-2">
-				<span class="input-group-text"><img src="../../../images/user.png" class="col-12 col-sm-2"></span> <input
+				<div class="input-group-text"><img src="../../../images/user.png" class="col-2"></div> <input
 					type="text" class="form-control" placeholder="Username">
 			</div>
 
 			<div class="input-group mb-3">
-				<span class="input-group-text"><img src="../../../images/password.png" class="col-12 col-sm-2"></span> <input
+				<span class="input-group-text"><img src="../../../images/password.png" class="col-2"></span> <input
 					type="text" class="form-control" placeholder="Password">
 			</div>
 
@@ -56,6 +56,7 @@
 		</div>
 
 	</form>
+
 
 
 
