--- a/public/durian/html/xdmin/loginout/login2.html
+++ b/public/durian/html/xdmin/loginout/login2.html
@@ -20,17 +20,20 @@
 		<div class="container bg-light mb-5">
 
 			<div class="input-group mb-2">
-				<div class="input-group-text"><img src="../../../images/user.png" class="col-2"></div> <input
-					type="text" class="form-control" placeholder="Username">
+				<div class="input-group-text">
+					<img src="../../../images/user.png" class="col-2">
+				</div>
+				<input type="text" class="form-control" placeholder="Username">
 			</div>
 
 			<div class="input-group mb-3">
 				<span class="input-group-text"><img src="../../../images/password.png" class="col-2"></span> <input
 					type="text" class="form-control" placeholder="Password">
 			</div>
-
-			<input type="checkbox"> 자동으로 로그인을 하겠습니다.
 			<div class="row">
+				<div class="col">
+				<input type="checkbox" id="autologin"> <label for="autologin">자동 로그인</label>
+				</div><div class="col"></div>
 				<button type="button" class="btn btn-info">로그인</button>
 			</div>
 		</div>
