--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -10,38 +10,60 @@
 
 <body>
 	<form>
-		<div class="container">
+		<div class="container-fluid">
 
 			<div class="row">
 				<div class="col-2">
 					<img src="../../../images/coupang.png" class="img-fluid">
 				</div>
 				<div class="col-6 fs-4">Coupang Management System</div>
-				<div class="col-2">관리자프로필</div>
+				<div class="col-2 fs-5">
+					<a href="#">관리자 프로필</a>
+				</div>
 				<div class="col-1">
 					<select class="form-select">
-
 						<option>언어</option>
-
 					</select>
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<ul class="nav bg-secondary">
-					<li class="nav-item"><a class="nav-link active link-light" aria-current="page" href="#">Home</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
 				</ul>
 			</div>
-			
-			<div class="row">
-			
-			
-			</div>
+			<br>
+			<div class="fs-3">Code</div>
+				<div class="row border m-2">
+					<div class="row mb-2">
+						<div class="col-2 p-2 pt-3">
+							<select class="form-select"><option>삭제여부</option>selected</select>
+						</div>
+						<div class="col-2 p-2 pt-3">
+							<select class="form-select"><option>날짜</option>selected</select>
+						</div>
+						<div class="col-2 p-2 pt-3">
+							<input class="form-control" placeholder="시작일">
+						</div>
+						<div class="col-2 p-2 pt-3">
+							<input class="form-control" placeholder="종료일">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-2 p-2 pb-3">
+							<select class="form-select"><option>검색구분</option>selected</select>
+						</div>
+						<div class="col-2 p-2 pb-3">
+							<input class="form-control" placeholder="검색어">
+						</div>
+						
+					</div>
+				</div>
 
-		</div>
+			</div>
 	</form>
 
 
