--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -20,7 +20,7 @@
 			</div>
 			<br>
 			<div class="row justify-content-center">
-				<div style="width: 400px;">
+				<div style="width: 35%;">
 
 
 					<div class="list-group">
