--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -16,7 +16,7 @@
 		<div class="container bg-light">
 			<br>
 			<div class="row justify-content-center">
-				<img src="../../../images/coupang.png" alt="coupang_logo" style="width: 300px;">
+				<img src="../../../images/xdmin/coupang.png" alt="coupang_logo" style="width: 300px;">
 			</div>
 			<br>
 			<div class="row justify-content-center">
@@ -25,7 +25,7 @@
 
 					<div class="list-group">
 						<div class="list-group-item list-group-item-action d-flex gap-3 py-3">
-							<img src="../../../images/user.png" alt="" width="32" height="32">
+							<img src="../../../images/xdmin/user.png" alt="" width="32" height="32">
 							<div>
 								<div>
 									<input type="text" class="form-control" placeholder="user name">
@@ -33,7 +33,7 @@
 							</div>
 						</div>
 						<div class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-							<img src="../../../images/password.png" alt="" width="32" height="32">
+							<img src="../../../images/xdmin/password.png" alt="" width="32" height="32">
 							<div class="d-flex gap-2 w-100 justify-content-between">
 								<div>
 									<input type="password" class="form-control" placeholder="password">
@@ -65,22 +65,22 @@
 			<div class="row justify-content-center">
 
 				<button type="button" class="btn btn-primary mb-1 col-4">
-					<img src="../../../images/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
+					<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
 				</button>
 			</div>
 			<div class="row justify-content-center">
 				<button type="button" class="btn btn-warning mb-1 col-4">
-					<img src="../../../images/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
+					<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
 				</button>
 			</div>
 			<div class="row justify-content-center">
 				<button type="button" class="btn btn-success mb-1 col-4">
-					<img src="../../../images/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
+					<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
 				</button>
 			</div>
 			<div class="row justify-content-center">
 				<button type="button" class="btn btn-default mb-1 col-4 border">
-					<img src="../../../images/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
+					<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
 				</button>
 			</div>
 			<br> <br>
