--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -14,7 +14,7 @@
 
 			<div class="row">
 				<div class="col-2">
-					<img src="../../../images/coupang.png" class="img-fluid">
+					<img src="../../../images/xdmin/coupang.png" class="img-fluid">
 				</div>
 				<div class="col-6 fs-4">Coupang Management System</div>
 				<div class="col-2 fs-5">
@@ -87,9 +87,16 @@
 		</div>
 		<br>
 		<div class="row">
-			<div class="col-11">Total : 12,345</div>
-			<div class="col"><select><option>10</select></div>
+			<div class="col-1 offset-1">Total : 12,345</div>
+			<div class="col-1 offset-9"><select><option>10</select></div>
 		</div>
+		
+		<div class="row">
+			<div class="col"></div>
+		
+		
+		</div>
+		
 	</form>
 
 
