--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -20,7 +20,7 @@
 			</div>
 			<br>
 			<div class="row justify-content-center">
-				<div style="width: 35%;">
+				<div style="width: 380px;" class="p-0">
 
 
 					<div class="list-group">
@@ -62,30 +62,37 @@
 				</div>
 			</div>
 			<br> <br>
-			<div class="row justify-content-center">
-
-				<button type="button" class="btn btn-primary mb-1 col-4">
-					<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
-				</button>
+			
+			<div class="row">
+				<div class="text-center">
+					<button type="button" class="btn btn-primary mb-1" style="width: 380px;">
+						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
+					</button>
+				</div>
 			</div>
-			<div class="row justify-content-center">
-				<button type="button" class="btn btn-warning mb-1 col-4">
-					<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
-				</button>
+			<div class="row">
+				<div class="text-center">
+					<button type="button" class="btn btn-warning mb-1" style="width: 380px;">
+						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
+					</button>
+				</div>
 			</div>
-			<div class="row justify-content-center">
-				<button type="button" class="btn btn-success mb-1 col-4">
-					<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
-				</button>
+			<div class="row">
+				<div class="text-center">
+					<button type="button" class="btn btn-success mb-1" style="width: 380px;">
+						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
+					</button>
+				</div>
 			</div>
-			<div class="row justify-content-center">
-				<button type="button" class="btn btn-default mb-1 col-4 border">
-					<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
-				</button>
+			<div class="row">
+				<div class="text-center">
+					<button type="button" class="btn btn-default mb-1 border" style="width: 380px;">
+						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
+					</button>
+				</div>
 			</div>
 			<br> <br>
 		</div>
-
 	</form>
 
 
