--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
+
 	<form>
 		<div class="container-fluid">
-
+			<br>
 			<div class="row">
-				<div class="col-2">
+				<div class="col-sm-2">
 					<img src="../../../images/xdmin/coupang.png" class="img-fluid">
 				</div>
-				<div class="col-6 fs-4">Coupang Management System</div>
-				<div class="col-2 fs-5">
+				<div class="col-sm-6 fs-4 mb-2">Coupang Management System</div>
+				<div class="col-sm-2 fs-6 mb-2">
 					<a href="#">관리자 프로필</a>
 				</div>
-				<div class="col-1">
+				<div class="col-sm-1 mb-2">
 					<select class="form-select">
 						<option>언어</option>
 					</select>
@@ -39,38 +40,38 @@
 			<div class="fs-3">Code</div>
 			<div class="row border m-2">
 				<div class="row mb-2">
-					<div class="col-2 p-2 pt-3">
+					<div class="col-sm-2 p-2 pt-3">
 						<select class="form-select"><option>삭제여부</option>selected
 						</select>
 					</div>
-					<div class="col-2 p-2 pt-3">
+					<div class="col-sm-2 p-2 pt-3">
 						<select class="form-select"><option>날짜</option>selected
 						</select>
 					</div>
-					<div class="col-2 p-2 pt-3">
+					<div class="col-sm-2 p-2 pt-3">
 						<input class="form-control" placeholder="시작일">
 					</div>
-					<div class="col-2 p-2 pt-3">
+					<div class="col-sm-2 p-2 pt-3">
 						<input class="form-control" placeholder="종료일">
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-2 p-2 pb-3">
+					<div class="col-sm-2 p-2 pb-3">
 						<select class="form-select"><option>검색구분</option>selected
 						</select>
 					</div>
-					<div class="col-2 p-2 pb-3">
+					<div class="col-sm-2 p-2 pb-3">
 						<input class="form-control" placeholder="검색어">
 					</div>
 					<div class="col">
-						<button class="btn btn-warning mt-2">
+						<button class="btn btn-warning mb-2">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
 								viewBox="0 0 16 16">
 								<path
 									d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
 							</svg>
 						</button>
-						<button class="btn btn-danger mt-2">
+						<button class="btn btn-danger mb-2">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise"
 								viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z" />
@@ -86,20 +87,66 @@
 
 		</div>
 		<br>
-		<div class="row">
-			<div class="col-1 offset-1">Total : 12,345</div>
-			<div class="col-1 offset-9"><select><option>10</select></div>
+		<div class="row row-cols-2">
+			<div class="text-start">
+				<div class="col-6 ms-2">Total : 12,345</div>
+			</div>
+			<div class="text-end">
+				<div class="col-12">
+					<select><option>10</select>
+				</div>
+			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="col"></div>
-		
-		
+
+
 		</div>
-		
+
 	</form>
 
-
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 
 	<script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
