--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -97,13 +97,94 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="col"></div>
-
-
+		<br>
+		<br>
+		<div class="border">
+			<div class="row bg-dark text-light">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">#</div>
+				<div class="col">Firstname</div>
+				<div class="col">Lastname</div>
+				<div class="col">Age</div>
+				<div class="col">City</div>
+				<div class="col">Country</div>
+				<div class="col">Sex</div>
+				<div class="col">Example</div>
+				<div class="col">Example</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">1</div>
+				<div class="col">영민</div>
+				<div class="col">윤</div>
+				<div class="col">27</div>
+				<div class="col">경기도</div>
+				<div class="col">대한민국</div>
+				<div class="col">남</div>
+				<div class="col">Yes</div>
+				<div class="col">Yes</div>
+			</div>
+			<div class="row bg-light">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">2</div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">3</div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+			</div>
+			<div class="row bg-light">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">4</div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<input type="checkbox">
+				</div>
+				<div class="col">5</div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+				<div class="col"></div>
+			</div>
 		</div>
-
 	</form>
 
 	<br>
