--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -64,14 +64,14 @@
 						<input class="form-control" placeholder="검색어">
 					</div>
 					<div class="col">
-						<button class="btn btn-warning mb-2">
+						<button class="btn btn-warning my-2">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
 								viewBox="0 0 16 16">
 								<path
 									d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
 							</svg>
 						</button>
-						<button class="btn btn-danger mb-2">
+						<button class="btn btn-danger my-2">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise"
 								viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z" />
@@ -85,106 +85,152 @@
 
 			</div>
 
-		</div>
-		<br>
-		<div class="row row-cols-2">
-			<div class="text-start">
-				<div class="col-6 ms-2">Total : 12,345</div>
-			</div>
-			<div class="text-end">
-				<div class="col-12">
-					<select><option>10</select>
+
+			<br>
+			<div class="row row-cols-2">
+				<div class="text-start">
+					<div class="col-6 ms-1">Total : 12,345</div>
+				</div>
+				<div class="text-end">
+					<div class="col-12">
+						<select><option>10</select>
+					</div>
 				</div>
 			</div>
-		</div>
-		<br>
-		<br>
-		<div class="border">
-			<div class="row bg-dark text-light">
-				<div class="col">
-					<input type="checkbox">
+			<br> <br>
+			<div class="border mb-2">
+				<div class="row bg-dark text-light">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">#</div>
+					<div class="col">Firstname</div>
+					<div class="col">Lastname</div>
+					<div class="col">Age</div>
+					<div class="col">City</div>
+					<div class="col">Country</div>
+					<div class="col">Sex</div>
+					<div class="col">Example</div>
+					<div class="col">Example</div>
 				</div>
-				<div class="col">#</div>
-				<div class="col">Firstname</div>
-				<div class="col">Lastname</div>
-				<div class="col">Age</div>
-				<div class="col">City</div>
-				<div class="col">Country</div>
-				<div class="col">Sex</div>
-				<div class="col">Example</div>
-				<div class="col">Example</div>
+				<div class="row">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">1</div>
+					<div class="col">영민</div>
+					<div class="col">윤</div>
+					<div class="col">27</div>
+					<div class="col">경기도</div>
+					<div class="col">대한민국</div>
+					<div class="col">남</div>
+					<div class="col">Yes</div>
+					<div class="col">Yes</div>
+				</div>
+				<div class="row bg-light">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">2</div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">3</div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+				</div>
+				<div class="row bg-light">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">4</div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<input type="checkbox">
+					</div>
+					<div class="col">5</div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+					<div class="col"></div>
+				</div>
 			</div>
+
+			<nav>
+				<ul class="pagination justify-content-center">
+					<li class="page-item"><a class="page-link" href="#"><<</a></li>
+					<li class="page-item"><a class="page-link" href="#"><</a></li>
+					<li class="page-item"><a class="page-link" href="#">1</a></li>
+					<li class="page-item"><a class="page-link" href="#">2</a></li>
+					<li class="page-item"><a class="page-link" href="#">3</a></li>
+					<li class="page-item"><a class="page-link" href="#">4</a></li>
+					<li class="page-item"><a class="page-link" href="#">5</a></li>
+					<li class="page-item"><a class="page-link" href="#">></a></li>
+					<li class="page-item"><a class="page-link" href="#">>></a></li>
+				</ul>
+			</nav>
+
 			<div class="row">
-				<div class="col">
-					<input type="checkbox">
+				<div class="col-1 ms-1 p-0">
+						<button class="btn btn-danger">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+							  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+							  <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+							</svg>
+						</button>
 				</div>
-				<div class="col">1</div>
-				<div class="col">영민</div>
-				<div class="col">윤</div>
-				<div class="col">27</div>
-				<div class="col">경기도</div>
-				<div class="col">대한민국</div>
-				<div class="col">남</div>
-				<div class="col">Yes</div>
-				<div class="col">Yes</div>
-			</div>
-			<div class="row bg-light">
-				<div class="col">
-					<input type="checkbox">
+				<div class="col-9 p-0">
+					<div class="text-end">
+						<button class="btn btn-success">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
+							  <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/>
+							  <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
+							</svg>
+						</button>
+					</div>
 				</div>
-				<div class="col">2</div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<input type="checkbox">
+				<div class="col p-0">
+					<button class="btn btn-primary">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+						  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+						  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+						</svg>
+					</button>
 				</div>
-				<div class="col">3</div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
 			</div>
-			<div class="row bg-light">
-				<div class="col">
-					<input type="checkbox">
-				</div>
-				<div class="col">4</div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<input type="checkbox">
-				</div>
-				<div class="col">5</div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-			</div>
+
 		</div>
+
+
 	</form>
 
 	<br>
