--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -208,7 +208,7 @@
 							</svg>
 						</button>
 				</div>
-				<div class="col-9 p-0">
+				<div class="col-9 offset-1 p-0">
 					<div class="text-end">
 						<button class="btn btn-success">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
