--- a/public/cherry/member/memberList.html
+++ b/public/cherry/member/memberList.html
@@ -44,8 +44,9 @@
 			<td>남</td>
 			<td>yym2044</td>
 			<td>111</td>
-			<td>yym@naver.com <span class="badge bg-success" type="button" data-bs-toggle="modal"
-				data-bs-target="#mailModal">email</span></td>
+			<td>yym@naver.com 
+			<span class="badge bg-success" type="button" data-bs-toggle="modal" data-bs-target="#mailModal">email</span>
+			</td>
 			<td>960607</td>
 			<td>01011111111</td>
 		</tr>
