--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<form>
+	<form class="form-inline">
 		<div class="container bg-light">
 			<br>
 			<div class="row justify-content-center">
@@ -22,17 +22,16 @@
 			<div class="row justify-content-center">
 				<div style="width: 380px;" class="p-0">
 
-
 					<div class="list-group">
-						<div class="list-group-item list-group-item-action d-flex gap-3 py-3">
+						<div class="list-group-item d-flex gap-3 py-3">
 							<img src="../../../images/xdmin/user.png" alt="" width="32" height="32">
-							<div>
+							<div class="d-flex gap-2 w-100 justify-content-between">
 								<div>
 									<input type="text" class="form-control" placeholder="user name">
 								</div>
 							</div>
 						</div>
-						<div class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+						<div class="list-group-item d-flex gap-3 py-3" aria-current="true">
 							<img src="../../../images/xdmin/password.png" alt="" width="32" height="32">
 							<div class="d-flex gap-2 w-100 justify-content-between">
 								<div>
@@ -41,6 +40,22 @@
 							</div>
 						</div>
 					</div>
+<br><br>
+					
+					
+					<div class="list-group-item d-flex gap-3 py-3">
+						<div class="col-1">
+							<img src="../../../images/xdmin/user.png" alt="" width="32" height="32">
+						</div>
+						<div class="col-10">
+							<input type="text" class="form-control" placeholder="user name">
+						</div>
+					</div>
+
+
+
+
+
 					<br>
 					<div class="row">
 						<div class="col-1 pe-0 ps-4">
@@ -61,39 +76,62 @@
 					</div>
 				</div>
 			</div>
+
+
 			<br> <br>
-			
-			<div class="row">
+
+
+			<!-- <div class="row">
 				<div class="text-center">
-					<button type="button" class="btn btn-primary mb-1" style="width: 380px;">
+					<button type="button" class="btn btn-primary mb-1 btn-block">
 						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
 					</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="text-center">
-					<button type="button" class="btn btn-warning mb-1" style="width: 380px;">
+					<button type="button" class="btn btn-warning mb-1 btn-block">
 						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
 					</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="text-center">
-					<button type="button" class="btn btn-success mb-1" style="width: 380px;">
+					<button type="button" class="btn btn-success mb-1 btn-block">
 						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
 					</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="text-center">
-					<button type="button" class="btn btn-default mb-1 border" style="width: 380px;">
+					<button type="button" class="btn btn-default mb-1 border btn-block">
+						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
+					</button>
+				</div>
+			</div> -->
+
+			<div class="d-flex justify-content-center">
+				<div class="row row-cols-1" style="width: 380px;">
+					<button type="button" class="btn btn-primary mb-1">
+						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
+					</button>
+					<button type="button" class="btn btn-warning mb-1">
+						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
+					</button>
+					<button type="button" class="btn btn-success mb-1">
+						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
+					</button>
+					<button type="button" class="btn btn-default mb-1 border">
 						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
 					</button>
 				</div>
 			</div>
+
 			<br> <br>
 		</div>
 	</form>
+
+
 
 
 
