--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -94,7 +94,8 @@
 				<th class="text-center table-success">주소</th>
 				<td colspan="3">
 					<button class="btn btn-outline-secondary" type="button" id="button-addon1" data-bs-toggle="modal"
-						data-bs-target="#exampleModal">주소 찾기</button> <!--MODAL -->
+						data-bs-target="#exampleModal">주소 찾기
+					</button> <!--MODAL -->
 					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-dialog-centered">
 							<div class="modal-content">
