--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -101,7 +101,7 @@
 			<div class="border mb-2">
 				<div class="row bg-dark text-light">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1" onclick="selectAll(this)">
 					</div>
 					<div class="col">#</div>
 					<div class="col">Firstname</div>
@@ -115,7 +115,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1">
 					</div>
 					<div class="col">1</div>
 					<div class="col">영민</div>
@@ -129,7 +129,7 @@
 				</div>
 				<div class="row bg-light">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1">
 					</div>
 					<div class="col">2</div>
 					<div class="col"></div>
@@ -143,7 +143,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1">
 					</div>
 					<div class="col">3</div>
 					<div class="col"></div>
@@ -157,7 +157,7 @@
 				</div>
 				<div class="row bg-light">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1">
 					</div>
 					<div class="col">4</div>
 					<div class="col"></div>
@@ -171,7 +171,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<input type="checkbox">
+						<input type="checkbox" name="checkbox1">
 					</div>
 					<div class="col">5</div>
 					<div class="col"></div>
@@ -275,6 +275,19 @@
 	<br>
 	<br>
 
+<script type="text/javascript">
+
+	function selectAll(selectAll) {
+		const checkboxes 
+			= document.getElementsByName("checkbox1");
+		
+		checkboxes.forEach((checkbox) => {
+			checkbox.checked = selectAll.checked;
+		})
+	}
+	
+</script>
+	
 	<script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
